[gd_scene load_steps=5 format=3 uid="uid://bhn5fl6oiwyuf"]

[ext_resource type="Theme" uid="uid://dr61761orgi5f" path="res://assets/themes/default.tres" id="1_ky66t"]
[ext_resource type="Script" path="res://src/twitch/TwitchSettings.gd" id="2_7igib"]
[ext_resource type="Texture2D" uid="uid://20x6c7drcw5d" path="res://assets/sprites/left.png" id="3_553to"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8flof"]
bg_color = Color(0, 0.858824, 1, 1)

[node name="TwitchSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ky66t")
script = ExtResource("2_7igib")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color(0.54902, 0.698039, 0.509804, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 100
alignment = 1

[node name="ChannelText" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Channel name"
alignment = 1
max_length = 40
expand_to_text_length = true
context_menu_enabled = false

[node name="ConnectButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 80
text = "Connect"

[node name="Users" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ky66t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(300, 150)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_8flof")
theme_override_styles/hover = SubResource("StyleBoxFlat_8flof")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8flof")
text = "Back"
icon = ExtResource("3_553to")

[connection signal="pressed" from="CenterContainer/VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
